fix: adjust font sizes in Navigation and Pokémon form components for improved readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -406,7 +406,7 @@
   font-weight: 500;
   line-height: 1;
   border-radius: 4px;
-  font-size: 15px;
+  font-size: 14px;
   color: var(--color-violet-900);
 }
 .NavigationMenuTrigger:focus,
@@ -428,7 +428,7 @@
 .NavigationMenuLink {
   display: block;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1;
 }
 
